<resources>
    <string name="app_name">Pawn Broker</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="interestRate">Interest Rate</string>
    <string name="startDate">Start Date</string>
    <string name="endDate">End Date</string>
    <string name="simpleInterest">Simple Interest</string>
    <string name="compoundInterest">Compound Interest</string>
    <string name="amount">Amount</string>
    <string name="differenceBetween">Difference between %1$s and %2$s is %3$s %4$s</string>
    <string name="days">Days</string>
    <string name="months">Months</string>
    <string name="interestMonths">Interest for %1$s months is %2$s. Total amount is %3$s</string>
    <string name="copyright">Copyright &#169; Kanted Business Solutions, Inc</string>
    <string name="title_activity_empty">EmptyActivity</string>
</resources>
